<resources>
    <string name="app_name">imtihan-SubBook</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="Date">Date</string>
    <string name="MonthlyCharge">0.00</string>
    <string name="Comment"> </string>
    <string name="Add">Add</string>
    <string name="NameTitle">Name:</string>
    <string name="DateTitle">Date:</string>
    <string name="ChargeTitle">Monthly Charge</string>
    <string name="CommentsTitle">Comments:</string>
    <string name="Blank"></string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="index">index</string>
    <string name="TotalCost">Total Cost: </string>
</resources>
